Attempted fix for background image stuttering when scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@ html {
   font-family: "Nunito", sans-serif;
   font-size: 16px;
   color: white;
+  background: url("img/background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 * {
@@ -110,11 +115,11 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 150px 1fr 200px;
-  background-image: url("img/background.jpg");
+  /* background-image: url("img/background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-position: right 50% bottom 65%;
+  background-position: top center; */
   grid-template-areas:
     "header"
     "main"
